--- a/Supplement_data_information.Rmd
+++ b/Supplement_data_information.Rmd
@@ -178,7 +178,7 @@ To build our panel, we only use articles,books, and book chapters published afte
 
 ```{r}
 oa_pubs_unique_panel <- oa_pubs_unique %>%
-  filter(!is.na(publication_year) & publication_year > 1973 & 
+  filter(!is.na(publication_year) & publication_year >= 1973 & 
            publication_year < 2024 & 
            type %in% c("article", "book", "book-chapter"))
 
@@ -194,7 +194,7 @@ printed_news_attention <- dbReadTable(con, "lexis_nexis_mentions")
 Filter out anything after 2023:
 ```{r}
 printed_news_attention_selected <- filter(printed_news_attention,
-                                          year < 2024)
+                                          year >= 1973 & year < 2024)
 ```
 
 How many mentions?
@@ -274,6 +274,20 @@ length(unique(attention_news_selected$id))
 nrow(attention_blogs_selected)
 length(unique(attention_blogs_selected$id))
 ```
+Total number of individual mentions we retrieve:
+```{r}
+nrow(attention_news_selected)+nrow(attention_blogs_selected)
+```
+Combine the URLs:
+```{r}
+all_urls <- c(attention_news_selected$url, attention_blogs_selected$url)
+
+length(unique(all_urls))
+```
+How many NAs:
+```{r}
+length(which(is.na(attention_news_selected$url))) + length(which(is.na(attention_blogs_selected$url)))
+```
 
 
 Compile the two together:
@@ -297,6 +311,7 @@ How many mentions before 2024:
 attention_news_blogs_profs_selected <- filter(attention_news_blogs_profs, year < 2024)
 
 nrow(attention_news_blogs_profs_selected)
+length(unique(attention_news_blogs_profs_selected$url))
 length(unique(attention_news_blogs_profs_selected$profile_id))
 ```
 
@@ -313,17 +328,18 @@ average_online <- attention_news_blogs_profs_selected %>%
 average_online
 ```
 
-How many unique URLs?
-```{r}
-length(unique(attention_news_blogs_profs$url))
-```
-
 
 About URLs we tried to retrieve:
 ```{r}
 attention_news_full <- dbReadTable(con, "pub_att_news_full_text")
 
-table(attention_news_full$response)
+attention_news_full_selected <- filter(attention_news_full, url %in% attention_news_blogs_profs_selected$url)
+
+
+table(attention_news_full_selected$response == "200")
+prop.table(table(attention_news_full_selected$response == "200"))
+
+prop.table(table(attention_news_full_selected$response %in% c("404", "401", "timeout")))
 ```
 
 Clean the environment:
@@ -345,7 +361,7 @@ rm(printed_news_attention_selected_filt)
 gc()
 ```
 
-## Coauthor data
+# Coauthor data
 
 First, let's count the unique coauthors:
 ```{r}
@@ -369,13 +385,10 @@ table(coauthors_unique_orcids_filter$found)
 prop.table(table(coauthors_unique_orcids_filter$found))
 ```
 
-## Panel data info
+# Panel data info
 
 ```{r}
-prof_panel_coa <- read_csv("panel_datasets/prof_panel_tidy.csv")
-
-prof_panel_filter <- filter(prof_panel_coa,
-                            year < 2024 & !is.na(general_field))
+prof_panel_coa <- read_csv("panel_datasets/prof_panel_anonymised.csv")
 ```
 
 Number of observations:
